0028099: Visualization, OpenGl_Text - handle DIMENSION and SUBTITLE styles within Core Profile

OpenGl_Text now creates VBO for drawing background rectangle.